# align-browser

./: .gitignore  .release-please-config.json  CHANGELOG.md  CLAUDE.md  README.md  build.py  comparison-table-design.md  pyproject.toml
.github/workflows/: lint-tests.yml  release.yml  test.yml
align_browser/: __init__.py  build.py  conftest.py  experiment_models.py  experiment_parser.py  test_experiment_parser.py  test_frontend.py  test_frontend_real_data.py
align_browser/static/: app.js  state.js  style.css  table-formatter.js
scripts/: test-ci.sh
src/: build.py  conftest.py  experiment_models.py  experiment_parser.py  test_build.py  test_column_operations.py  test_experiment_parser.py  test_frontend.py  test_parsing.py  test_table_column_parameters.py
static/css/: style.css
static/js/: app.js  state.js
templates/: index.html.j2
