[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "align-browser"
version = "0.1.0"
description = "Static web application for visualizing ADM results"
dependencies = [
    "jinja2",
    "pyyaml"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "ruff"
]